# koi-rs

./: .gitignore  BENCHMARK.md  BENCHMARK_PLAN.md  Cargo.toml  LICENSE.md  README.md  test.koi
.cargo/: config.toml
koi/: Cargo.toml  file.rs  lib.rs  types.rs  util.rs
koi-bench/: Cargo.toml  bin.rs  suite.rs  util.rs
koi-bench/formats/: koi.rs  mod.rs  png.rs  pngfast.rs  qoi.rs
koi-cli/: Cargo.toml  bin.rs  lib.rs
koi/decoder/: block.rs  mod.rs  reader.rs  stream.rs
koi/encoder/: block.rs  mod.rs  stream.rs  writer.rs
playground/: Cargo.toml  bin.rs  plot.rs  util.rs
playground/fft/: mod.rs  noise.rs  spectrum.rs
src/: bin.rs  file.rs  lib.rs  types.rs  util.rs
src/decoder/: mod.rs  reader.rs  stream.rs
src/encoder/: mod.rs  stream.rs
